[tool.poetry]
name = "llmcontexttfm"
version = "0.1.0"
description = ""
authors = ["Adan Aviles <adan.aviles.cahill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
langchain-core = "^0.1.45"
langchain-experimental = "^0.0.57"
langgraph = "^0.0.38"
langfuse = "^2.27.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.4.0"
mypy = "^1.9.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
